Added 64bit build directory to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Makefile
 
 # build directory
 build-JohnnysWebView-Desktop_Qt_5_1_1_GCC_32bit-Debug/
+build-JohnnysWebView-Desktop_Qt_5_1_1_GCC_64bit-Debug/
