--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ Makefile
 # build directory
 build-JohnnysWebView-Desktop_Qt_5_1_1_GCC_32bit-Debug/
 build-JohnnysWebView-Desktop_Qt_5_1_1_GCC_64bit-Debug/
+
+# compiling from compile.sh
+source/JohnnysWebView
+source/main.moc
+source/ui_mainwindow.h
