--- a/deb/64bit/DEBIAN/control
+++ b/deb/64bit/DEBIAN/control
@@ -2,7 +2,7 @@ Package: johnnys-webview
 Version: 0.1.0
 Architecture: amd64
 Maintainer: Ionică Bizău <bizauionica@gmail.com>
-Depends: qt5-default libqt5webkit5-dev qtquick1-5-dev qtlocation5-dev qtsensors5-dev qtdeclarative5-dev libsqlite3-dev
+Depends: qt5-default, libqt5webkit5-dev, qtquick1-5-dev, qtlocation5-dev, qtsensors5-dev, qtdeclarative5-dev, libsqlite3-dev
 Section: extras
 Homepage: https://github.com/IonicaBizau/johnnys-webview
 Description: A simple web page loader as a desktop application.
