:arrow_up: 1.0.0 :tada:

--- a/package.json
+++ b/package.json
@@ -237,6 +237,9 @@
     "resources/",
     "menu/",
     "cli.js",
-    "index.js"
+    "index.js",
+    "bloggify.js",
+    "bloggify.json",
+    "bloggify/"
   ]
 }
