:arrow_up: 1.0.0 :tada:

--- a/package.json
+++ b/package.json
@@ -238,6 +238,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
